--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 	<title>Giphy Search</title>
 
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='stylesheet' href='global.css'>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
 	<script defer src='/build/bundle.js'></script>
 </head>
